[gd_scene load_steps=6 format=2]

[ext_resource path="res://Rotation.gd" type="Script" id=1]
[ext_resource path="res://PRACTICA 3/Redsquare.png" type="Texture" id=2]
[ext_resource path="res://PRACTICA 3/Presenter.png" type="Texture" id=3]
[ext_resource path="res://PRACTICA 3/rainbow-spinning-wheel-png.png" type="Texture" id=4]
[ext_resource path="res://PRACTICA 3/TVShowBackground.jpg" type="Texture" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TVShowBackground" type="Sprite" parent="."]
position = Vector2( 511.261, 301.245 )
scale = Vector2( 1.66452, 1.63804 )
texture = ExtResource( 5 )

[node name="SpinningWheel" type="Sprite" parent="."]
position = Vector2( 458.894, 328.156 )
scale = Vector2( 0.29133, 0.281622 )
texture = ExtResource( 4 )

[node name="Presenter" type="Sprite" parent="."]
position = Vector2( 727.655, 323.994 )
scale = Vector2( 0.363135, 0.434544 )
texture = ExtResource( 3 )

[node name="t_label" type="Label" parent="."]
anchor_right = 0.293
margin_left = 159.489
margin_top = 159.959
margin_right = 292.489
margin_bottom = 182.959
text = "t = "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="theta_label" type="Label" parent="."]
margin_left = 156.172
margin_top = 192.719
margin_right = 220.172
margin_bottom = 225.719
rect_rotation = -0.199073
rect_pivot_offset = Vector2( 32.2867, 1.22253 )
text = "theta = "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Square" type="Sprite" parent="."]
position = Vector2( 489.57, 181.384 )
scale = Vector2( 0.0200877, 0.0222087 )
texture = ExtResource( 2 )
